--- a/css/style.css
+++ b/css/style.css
@@ -58,13 +58,16 @@ a:hover { color: #ffff00; }
 
 /*
   Colors:
-	bodybg: rgba(85, 157, 204, 0.5)
-	panelbg: rgba(255, 255, 255, 0.8)
-	skyblue: hsla(200, 100%, 60%, 1)
+	bodybg:		hsla(215, 33%, 60%, 0.7)
+	header: 	hsla(214, 100%, 50%, 1)
+	whiteLink:	hsla(200, 100%, 100%, 1)
+	panelbg:	rgba(255, 255, 255, 0.8)
+	skyblue:	hsla(200, 100%, 60%, 1)
+  	skyblue2:	hsla(200, 90%, 80%, 1)
 */
 
 body {
-  background: hsla(214, 33%, 60%, 0.7);
+  background: hsla(215, 33%, 60%, 0.7);
   font-family: sans-serif;
   position: relative;
   width: 100%;
@@ -75,7 +78,7 @@ body {
 }
 
 header, footer {
-  background: hsla(214, 100%, 50%, 1); /*LightSeaGreen*/
+  background: hsla(214, 100%, 50%, 1);
   font-family: sans-serif;
   position: fixed;
   width: 100%;
@@ -85,7 +88,7 @@ header, footer {
   z-index: 10;
 }
 header a, footer a {
-  color: hsla(200, 100%, 100%, 1); /*Ivory*/
+  color: hsla(200, 100%, 100%, 1);
   text-decoration: none;
 }
 
@@ -114,11 +117,11 @@ header h1 a {
   font-family: courier;
   text-decoration: none;
   font-weight: normal;
-  text-shadow: 1px 1px 2px rgba(20,20,20,0.9), -1px -1px 3px rgba(20,20,20,0.6);
+  text-shadow: 1px 1px 2px rgba(20, 20, 20, 0.9), -1px -1px 3px rgba(20, 20, 20, 0.6);
 }
 header h1 a:hover {
   color: #000;
-  text-shadow: 1px 1px 2px rgba(200,200,200,0.9), -1px -1px 3px hsla(69, 83%, 67%,0.9); 
+  text-shadow: 1px 1px 2px rgba(200, 200, 200, 0.9), -1px -1px 3px hsla(69, 83%, 67%, 0.9); 
 }
 
 /* FOOTER */
@@ -126,7 +129,7 @@ header h1 a:hover {
 footer {
   background: hsla(235, 70%, 40%, 1);
   color: hsla(200, 80%, 90%, 1);
-  text-shadow: 1px 1px 2px rgba(200,200,200,0.9), -1px -1px 3px hsla(69, 83%, 67%,0.5); 
+  text-shadow: 1px 1px 2px rgba(200 ,200, 200, 0.9), -1px -1px 3px hsla(69, 83%, 67%, 0.5); 
 /*  text-shadow: 1px 1px 2px rgba(20,20,20,0.9), -1px -1px 3px rgba(20,20,20,0.9);*/
 }
 footer a:hover {
@@ -170,7 +173,7 @@ footer p {
 }
 #main-nav li a {
   color: hsla(202, 65%, 90%, 1);
-  text-shadow: 1px 1px 2px rgba(20,20,20,0.9);
+  text-shadow: 1px 1px 2px rgba(20, 20, 20, 0.9);
   padding: 5px 8px;
   margin: 0 5px 0 0;
   font-size: 14px;
@@ -181,7 +184,7 @@ footer p {
 #main-nav a.active {
   background: hsla(202, 65%, 90%, 1);
   color: hsla(200, 40%, 30%, 0.9);
-  text-shadow: 1px 1px 2px rgba(200,200,200,0.9);
+  text-shadow: 1px 1px 2px rgba(200, 200, 200, 0.9);
 }
 
 .left {
@@ -275,17 +278,8 @@ footer p {
   z-index: 7; /* change to either 2: correct spot in stack; or 7: on top of stack for dev; */
 
   display: inline-block;
-  position: absolute;
+  position: relative;
   margin: 0 auto;
-}
-
-/* Ruler for positioning purposes */
-#ruler {
-  position: absolute;
-  left: -1800px;
-  top: -1210px;
-  width: 4659px;
-  height: 3362px;
 }
 
 /* Panels */
@@ -297,33 +291,16 @@ footer p {
   background: hsla(0, 0%, 98%, 0.6);
   border: 1px solid hsla(200, 70%, 60%, 0.8);
   display: inline-block;
-  margin: 55px 20px;
-  padding: 10px;
+  margin: 55px auto;
+  padding: 1.000em;
   width: 100%;
   position: absolute;
   overflow: hidden;
 
-  -webkit-box-shadow: 0 0 5px 2px hsla(228, 0%, 0%, 0.5);
-  box-shadow: 0 0 15px 0px hsla(228, 0%, 0%, 0.5);
+  -webkit-box-shadow: 0 0 15px 0 hsla(228, 0%, 0%, 0.5);
+  box-shadow: 0 0 15px 0 hsla(228, 0%, 0%, 0.5);
 }
-#layer3 #panel12 {
-  background: none;
-  border: 0;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-}
-.panel article {
-  color: #000;
-  font-size: 12px;
-  line-height: 18px;
-  position: relative;
-  display: inline-block;
-  width: 100%;
-  margin: 0;
-  padding: 0 5px;
-  overflow-x: hidden;
-  overflow-y: auto;
-}
+
 /*
 .panel article img {
   max-width: 100%;
@@ -339,6 +316,24 @@ footer p {
   height: 100%;
 }
 */
+.panel article {
+  color: #000;
+  font-size: 12px;
+  line-height: 18px;
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  margin: 0;
+  padding: 0 5px;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+#layer3 #panel12 {
+  background: none;
+  border: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
 .panel article a {
 	color: hsla(202, 40%, 30%, 1);
 	font-size: 14px;
@@ -348,12 +343,20 @@ footer p {
 .panel article a:hover {
 	color: hsla(0, 100%, 50%, 1);
 }
+.panel article a.project-link {
+	display: inline-block;
+	position: relative;
+	float: right;
+	top: 10px;
+	right: 10px;
+}
 
 .panel article figure {
   float: left;
 }
 
 /* PANEL GALLERY AND THUMBNAILS */
+
 .panel .gallery-thumbs {
   position: relative;
   top: 10px;
@@ -368,8 +371,8 @@ footer p {
 	height: 89px;
 	border: 1px solid hsla(200, 90%, 100%, 0.4);
 
-	-webkit-box-shadow: 0px 0px 5px 0px hsla(228, 0%, 0%, 0.7);
-	box-shadow: 0px 0px 5px 0px hsla(228, 0%, 0%, 0.7);
+	-webkit-box-shadow: 0 0 5px 0 hsla(228, 0%, 0%, 0.7);
+	box-shadow: 0 0 5px 0 hsla(228, 0%, 0%, 0.7);
 }
 .panel .gallery-thumbs a:hover,
 .panel .gallery-thumbs a.current {
@@ -417,8 +420,8 @@ footer p {
 	font-size: 14px;
 	font-family: arial;
 
-	-webkit-box-shadow: 0 0 5px 2px hsla(228, 0%, 0%, 0.2);
-	box-shadow: 0 0 15px 0px hsla(228, 0%, 0%, 0.2);
+	-webkit-box-shadow: 0 0 15px 0 hsla(228, 0%, 0%, 0.2);
+	box-shadow: 0 0 15px 0 hsla(228, 0%, 0%, 0.2);
 }
 .panel article .gallery img,
 .panel article .gallery iframe {
@@ -427,8 +430,8 @@ footer p {
 	display: inline-block;
 	width: 655px;
 	
-	-webkit-box-shadow: 0 0 5px 2px hsla(228, 0%, 0%, 0.2);
-	box-shadow: 0 0 15px 0px hsla(228, 0%, 0%, 0.2);
+	-webkit-box-shadow: 0 0 15px 0 hsla(228, 0%, 0%, 0.2);
+	box-shadow: 0 0 15px 0 hsla(228, 0%, 0%, 0.2);
 }
 
 .panel article .project-content {
@@ -483,18 +486,20 @@ footer p {
 /* PANEL 5 STYLES */
 
 #panel5 #default-nav {
-  display: inline-block;
-  margin: 0 0.025em;
+  /*display: inline-block;*/
+  margin: 0 auto 025em;
   width: 1010px;
-  position: relative;
-  
+  position: relative; 
 }
 #default-nav ul {
   list-style: none;
 }
 #default-nav li {
   background-image: url('../imgs/sprite-panels.png');
+  /* Set size to 100% wide, and auto height to preserve aspect ratio */
+  background-size: 100% auto;
   background-repeat: no-repeat;
+  
   border: 1px solid hsla(200, 90%, 80%, 1);
   display: inline-block;
   position: relative;
@@ -502,35 +507,43 @@ footer p {
   margin: 0.500em;
   width: 320px;
   height: 182px;
-
-  -webkit-box-shadow: 0 0 5px 0px hsla(228, 0%, 0%, 0.5);
+  
+  -webkit-box-shadow: 0 0 5px 1px hsla(228, 0%, 0%, 0.5);
   box-shadow: 0 0 5px 1px hsla(228, 0%, 0%, 0.5);
 }
 #default-nav li:hover {
-  background: hsla(214, 100%, 50%, 0.7);
+  background: hsla(215, 100%, 50%, 0.7);
   background-position: 0 179px;
 }
-
+#default-nav li span {
+  position: relative;
+  top: 55px;
+  text-transform: uppercase;
+  font-size: 18px;
+}
 #default-nav li a {
   position: absolute;
   bottom: 0;
+  left: 0;
   padding: 2px 0;
   width: 100%;
   height: 100%;
 }
-#default-nav  li a span {
-  background: hsla(214, 100%, 50%, 0.8);
+#default-nav li a span {
+  background: hsla(215, 100%, 50%, 0.8);
   color: hsla(202, 65%, 90%, 1);
   text-shadow: 1px 1px 2px rgba(20,20,20,0.9);
-  font-family: sans-serif;
-  display: block;
-  text-align: center;
-  padding: 6px 0;
-  height: 18px;
   font-size: 14px;
+  font-family: sans-serif;
+  text-align: center;
+  text-transform: capitalize;
+  padding: 6px 0;
+  height: auto;
   width: 100%;
-  bottom: 0;
+  display: block;
   position: absolute;
+  bottom: 0;
+  top: inherit;
 }
 
 #default-nav .panel1 {
@@ -546,12 +559,15 @@ footer p {
   background-position: 0 -554px;
 }
 #default-nav .panel5 {
-  background: hsla(214, 100%, 50%, 0.7);
+  background: hsla(215, 100%, 50%, 0.7);
   background-position: 0 179px;
   color: hsla(202, 65%, 90%, 1);
   text-shadow: 1px 1px 2px hsla(0, 0%, 8%, 0.9);
   text-align: center;
   font-family: 'courier new', 'monospace';
+}
+#default-nav .panel5:hover {
+  background: hsla(315, 100%, 50%, 0.7);  
 }
 #default-nav .panel5 h1 {
   font-size: 22px;
@@ -596,77 +612,6 @@ footer p {
 #default-nav .panel12 {
   background-position: 0 -741px;
 }
-
-
-
-/*
-  Colors:
-	bodybg: rgba(85, 157, 204, 0.5)
-	panelbg: rgba(255, 255, 255, 0.8)
-
-*/
-
-
-/* SLIDERS STYLES & OVERRIDES */
-
-.anythingSlider {
-  display: inline-block;
-  margin: 0;
-}
-
-.anythingSlider-default {
-  margin: 0;
-  padding: 2px 0;
-}
-.anythingSlider-default.activeSlider .anythingControls ul {
-  margin: 5px;
-  padding: 0;
-  position: relative;
-  width: 655px;
-  left: 0;
-  top: 0;
-  display: inline-block;
-  float: none;
-}
-
-.anythingSlider-default.activeSlider .anythingControls a {
-  background: none;
-  border: 1px solid hsla(200, 20%, 40%, 1);
-  display: inline-block;
-  height: 90px;
-  padding: 2px;
-  margin: 0 7px 17px 7px;
-}
-.anythingSlider-default.activeSlider .anythingControls a.cur,
-.anythingSlider-default.activeSlider .anythingControls a:hover {
-  background: none;
-  border: hsla(0, 100%, 50%, 1);
-}
-.anythingSlider-default .anythingControls a.cur {
-  background: none;
-}
-
-.slider li {
-  display: inline-block;
-  position: relative;
-  float: left;  
-}
-.slider li object {
-  position: relative;
-  display: inline-block;
-}
-.thumbNav {
-  list-style: none;
-  display: inline-block;
-  top: 20px;
-  position: relative;
-}
-.thumbNav li {
-  display: inline-block;
-  position: relative;
-  width: auto;
-}
-
 
 /* OTHER ELEMENTS */
 
