--- a/css/style.css
+++ b/css/style.css
@@ -120,8 +120,7 @@ header h1 a {
   text-shadow: 1px 1px 2px rgba(20, 20, 20, 0.9), -1px -1px 3px rgba(20, 20, 20, 0.6);
 }
 header h1 a:hover {
-  color: #fff;
-  text-shadow: 1px 1px 2px rgba(200, 200, 200, 0.9), -1px -1px 3px hsla(69, 83%, 67%, 0.9);
+  color: hsla(200, 100%, 100%, 1);
   text-decoration: underline;
 }
 
