--- a/css/style.css
+++ b/css/style.css
@@ -35,13 +35,13 @@ input[type="checkbox"] { vertical-align: bottom; }
 .ie6 input { vertical-align: text-bottom; }
 label, input[type="button"], input[type="submit"], input[type="image"], button { cursor: pointer; }
 button, input, select, textarea { margin: 0; }
-input:valid, textarea:valid {}
-input:invalid, textarea:invalid { border-radius: 1px; -moz-box-shadow: 0px 0px 5px red; -webkit-box-shadow: 0px 0px 5px red; box-shadow: 0px 0px 5px red; }
+input:valid, textarea:valid { }
+input:invalid, textarea:invalid { border-radius: 1px; -moz-box-shadow: 0 0 5px red; -webkit-box-shadow: 0 0 5px red; box-shadow: 0 0 5px red; }
 .no-boxshadow input:invalid, .no-boxshadow textarea:invalid { background-color: #f0dddd; }
 ::-moz-selection{ background: hsla(214, 50%, 50%, 0.7); color:#fff; text-shadow: none; }
 ::selection { background: hsla(214, 50%, 50%, 0.7); color:#fff; text-shadow: none; }
 a:link { -webkit-tap-highlight-color: #FF5E99; }
-button {  width: auto; overflow: visible; }
+button { width: auto; overflow: visible; }
 .ie7 img { -ms-interpolation-mode: bicubic; }
 body, select, input, textarea { color: #444; }
 h1, h2, h3, h4, h5, h6 { font-weight: bold; }
@@ -50,9 +50,9 @@ a:hover { color: #ffff00; }
 
 /*
 	// ========================================== \\
-   ||                                              ||
-   ||               My styles !                    ||
-   ||                                              ||
+ ||                                              ||
+ ||               My styles !                    ||
+ ||                                              ||
 	\\ ========================================== //
 */
 
@@ -63,8 +63,39 @@ a:hover { color: #ffff00; }
 	whiteLink:	hsla(200, 100%, 100%, 1)
 	panelbg:	rgba(255, 255, 255, 0.8)
 	skyblue:	hsla(200, 100%, 60%, 1)
-  	skyblue2:	hsla(200, 90%, 80%, 1)
+  skyblue2:	hsla(200, 90%, 80%, 1)
 */
+
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+/* TRACK */
+
+::-webkit-scrollbar-track {
+    -webkit-border-radius: 10px;
+            border-radius: 10px;
+
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+            box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+/* HANDLE */
+
+::-webkit-scrollbar-thumb {
+  background: rgba(180, 180, 180, 0.8);
+
+  -webkit-border-radius: 10px;
+          border-radius: 10px;
+
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+::-webkit-scrollbar-thumb:window-inactive {
+  background: rgba(180, 180, 180, 0.4);
+}
+
 
 body {
   background: hsla(215, 33%, 60%, 0.7);
@@ -102,8 +133,9 @@ header {
 footer {
   bottom: 0;
   border-top: 1px solid hsla(200, 90%, 80%, 1);
+
   -webkit-box-shadow: 0px -2px 10px 1px hsla(228, 75%, 35%, 0.8); /*#18265e*/
-		  box-shadow: 0px -2px 10px 1px hsla(228, 75%, 35%, 0.8); /*#18265e*/
+		      box-shadow: 0px -2px 10px 1px hsla(228, 75%, 35%, 0.8); /*#18265e*/
 }
 
 header h1 {
@@ -124,6 +156,13 @@ header h1 a:hover {
   color: hsla(200, 100%, 100%, 1);
   text-decoration: underline;
 }
+
+pre, code {
+  color: #333;
+  font-size: 13px;
+  font-family: 'monospace', 'sans-serif';
+}
+
 
 /* FOOTER */
 
@@ -330,7 +369,15 @@ footer p {
   overflow: hidden;
 
   -webkit-box-shadow: 0 0 15px 0 hsla(228, 0%, 0%, 0.5);
-  box-shadow: 0 0 15px 0 hsla(228, 0%, 0%, 0.5);
+          box-shadow: 0 0 15px 0 hsla(228, 0%, 0%, 0.5);
+}
+#panel14.panel,
+#panel15.panel {
+  background: none;
+  border: 0;
+
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 /*
@@ -352,19 +399,13 @@ footer p {
     color: #000;
     font-size: 12px;
     line-height: 18px;
-    position: relative;
     display: inline-block;
+    position: relative;
     width: 100%;
     margin: 0;
     padding: 0 5px;
     overflow-x: hidden;
     overflow-y: auto;
-}
-#panel12 {
-  background: none;
-  border: 0;
-  -webkit-box-shadow: none;
-  box-shadow: none;
 }
 .panel article a {
 	color: hsla(202, 40%, 30%, 1);
@@ -429,24 +470,24 @@ footer p {
 	height: 89px;
 	border: 1px solid hsla(200, 90%, 100%, 0.4);
 
-	-webkit-box-shadow: 0 0 5px 0 hsla(228, 0%, 0%, 0.7);
-	box-shadow: 0 0 5px 0 hsla(228, 0%, 0%, 0.7);
+  -webkit-box-shadow: 0 0 5px 0 hsla(228, 0%, 0%, 0.7);
+	        box-shadow: 0 0 5px 0 hsla(228, 0%, 0%, 0.7);
 }
 .panel .gallery-thumbs a:hover,
 .panel .gallery-thumbs .current {
 	border: 1px solid hsla(215, 40%, 90%, 1);
 
 	-webkit-box-shadow: 0 0 5px 0 hsla(330, 100%, 50%, 1);
-	box-shadow: 0 0 5px 0 hsla(330, 100%, 50%, 1);
+	        box-shadow: 0 0 5px 0 hsla(330, 100%, 50%, 1);
 }
 .panel .gallery-thumbs p {
   display: none;
 }
 .panel article .gallery {
   /*background: rgba(255, 255, 255, 0.4);*/
+  display: inline-block;
   position: relative;
   top: 20px;
-  display: inline-block;
   height: 580px;
   width: 100%;
   overflow: hidden;
@@ -455,11 +496,11 @@ footer p {
   margin: 0;
 }
 .panel article .gallery li {
+  position: relative;
+  overflow: hidden;
+  float: left;
 	width: 100%;
 	height: 575px;
-	position: relative;
-	overflow: hidden;
-	float: left;
 	padding: 8px;
 }
 .panel article .gallery li.active {
@@ -468,29 +509,29 @@ footer p {
 .panel article .gallery p {
 	background: hsla(205, 5%, 98%, 1);
 	border: 1px solid hsla(230, 40%, 50%, 0.9);
-	margin-bottom: 10px;
-	padding: 10px;
-	float: left;
-	display: inline-block;
-	width: 29%;
-	margin-left: 20px;
-	position: relative;
 	font-size: 14px;
 	font-family: arial;
+  position: relative;
+  float: left;
+  display: inline-block;
+  width: 29%;
+  padding: 10px;
+  margin-bottom: 10px;
+  margin-left: 20px;
 
 	-webkit-box-shadow: 0 0 15px 0 hsla(228, 0%, 0%, 0.2);
-	box-shadow: 0 0 15px 0 hsla(228, 0%, 0%, 0.2);
+	        box-shadow: 0 0 15px 0 hsla(228, 0%, 0%, 0.2);
 }
 .panel article .gallery img,
 .panel article .gallery iframe {
 	background: transparent;
   border: 1px solid hsla(230, 40%, 50%, 0.9);
+  display: inline-block;
 	float: left;
-	display: inline-block;
 	width: 655px;
 
 	-webkit-box-shadow: 0 0 15px 0 hsla(228, 0%, 0%, 0.2);
-	box-shadow: 0 0 15px 0 hsla(228, 0%, 0%, 0.2);
+	        box-shadow: 0 0 15px 0 hsla(228, 0%, 0%, 0.2);
 }
 
 /* Rows */
@@ -506,6 +547,9 @@ footer p {
 .row3 {
   top: 2700px;
 }
+.row4 {
+  top: 4200px;
+}
 
 /* Cols */
 .col0 {
@@ -520,9 +564,9 @@ footer p {
 
 #default-nav {
   /*display: inline-block;*/
+  position: relative;
   margin: 0 auto;
   width: 1010px;
-  position: relative;
 }
 #default-nav ul {
   list-style: none;
@@ -530,11 +574,6 @@ footer p {
 #default-nav li {
   background-image: url('../imgs/sprite-panels.png');
   background-repeat: no-repeat;
-  /* Set size to 100% wide, and auto height to preserve aspect ratio */
-
-  -webkit-background-size: 100% auto;
-  background-size: 100% auto;
-
   border: 1px solid hsla(200, 90%, 80%, 1);
   display: inline-block;
   position: relative;
@@ -543,18 +582,22 @@ footer p {
   width: 320px;
   height: 178px;
 
+  /* Set size to 100% wide, and auto height to preserve aspect ratio */
+  -webkit-background-size: 100% auto;
+          background-size: 100% auto;
+
   -webkit-box-shadow: 0 0 5px 1px hsla(228, 0%, 0%, 0.5);
-  box-shadow: 0 0 5px 1px hsla(228, 0%, 0%, 0.5);
+          box-shadow: 0 0 5px 1px hsla(228, 0%, 0%, 0.5);
 }
 #default-nav li:hover {
   background: hsla(215, 100%, 50%, 0.7);
   background-position: 0 179px;
 }
 #default-nav li span {
+  font-size: 18px;
+  text-transform: uppercase;
   position: relative;
   top: 55px;
-  text-transform: uppercase;
-  font-size: 18px;
 }
 #default-nav li a {
   position: absolute;
@@ -572,13 +615,13 @@ footer p {
   font-family: sans-serif;
   text-align: center;
   text-transform: capitalize;
-  padding: 6px 0;
-  height: auto;
-  width: 100%;
   display: block;
   position: absolute;
   bottom: 0;
   top: inherit;
+  padding: 6px 0;
+  height: auto;
+  width: 100%;
 }
 
 #default-nav .panel1 {
@@ -615,10 +658,10 @@ footer p {
   top: 40px;
 }
 #default-nav .panel5 div {
+  font-weight: bold;
   display: block;
   position: relative;
   bottom: -54px;
-  font-weight: bold;
 }
 #default-nav .panel5 h3 {
   font-size: 20px;
@@ -639,14 +682,25 @@ footer p {
   background-position: 0 -1491px;
 }
 #default-nav .panel10 {
-  background-position: 0 -1678px;
+  background-position: 0 -2052px;
 }
 #default-nav .panel11 {
-  background-position: 0 -1865px;
+  background-position: 0 -2242px;
 }
 #default-nav .panel12 {
+  background-position: 0 -1865px;
+}
+#default-nav .panel13 {
+  background-position: 0 -1678px;
+}
+#default-nav .panel14 {
   background-position: 0 -741px;
 }
+#default-nav .panel15 {
+  background-position: 0 -741px;
+}
+
+
 
 /* OTHER ELEMENTS */
 
