working to make things more nicely responsive for diff screen sizes

--- a/css/style.css
+++ b/css/style.css
@@ -365,7 +365,7 @@ footer p {
 
   margin: 55px auto;
   padding: 1.000em;
-  width: 100%;
+  width: 97.68777739%;
   position: absolute;
   overflow: hidden;
 
