--- a/panels/panel7/style.css
+++ b/panels/panel7/style.css
@@ -1,4 +1,4 @@
-#game {
+#panel7 #game {
     text-align: center;
     margin: 0 auto;
     width: 80%;
@@ -6,23 +6,23 @@
     top: 20px;
     font-family: arial;
 }
-#game p:last-child {
+#panel7 #game p:last-child {
     margin-top: 10px;
 }
-a {
+#panel7 a {
     color: hsla(202, 40%, 30%, 1);
     font-size: 14px;
     font-weight: bold;
 }
-a:hover {
+#panel7 a:hover {
     color: hsla(0, 100%, 50%, 1);
     border: 0;
 }
-ul {
+#panel7 ul {
     display: inline-block;
     list-style: none;
 }
-li {
+#panel7 li {
     display: inline-block;
     position: relative;
     float: left;
@@ -31,40 +31,40 @@ li {
     width: 113px;
     height: 109px;
 }
-li a {
+#panel7 li a {
     padding: 45px 56px;
     position: absolute;
     left: 0;
     text-indent: -99999px;
 }
 
-#Rock { background: url('rock.png') no-repeat 0 0; }
-#Scissors { background: url('scissors.png') no-repeat 0 0; }
-#Paper { background: url('paper.png') no-repeat 0 0; }
+#panel7 #Rock { background: url('rock.png') no-repeat 0 0; }
+#panel7 #Scissors { background: url('scissors.png') no-repeat 0 0; }
+#panel7 #Paper { background: url('paper.png') no-repeat 0 0; }
 
-h1 {
+#panel7 h1 {
     font-size: 34px;
     display: block;
 }
-h3 {
+#panel7 h3 {
     font-size: 18px;
     display: block;
     margin: 20px 0 30px;
 }
 
-#results {
+#panel7 #results {
     width: 80%;
     position: relative;
     top: 0;
     margin: 0 auto;
     display: inline-block;
 }
-#results div {
+#panel7 #results div {
     text-align: center;
 }
-#player, 
-#computer, 
-#winner {
+#panel7 #player,
+#panel7 #computer,
+#panel7 #winner {
     font-size: 30px;
     display: inline-block;
     position: relative;
@@ -74,10 +74,10 @@ h3 {
     color: blue;
     padding: 10px 20px;
 }
-#computer {
+#panel7 #computer {
     float: right;
 }
-#winner {
+#panel7 #winner {
     display: inline-block;
     width: 300px;
     top: 70px;
@@ -88,17 +88,17 @@ h3 {
     color: maroon;
     font-weight: bold;
 }
-h2 {
+#panel7 h2 {
     color: #000;
     font-size: 20px;
     text-decoration: underline;
 }
-header,
-footer {
+#panel7 header,
+#panel7 footer {
     width: 70%;
     margin: 0 auto;
     text-align: center;
 }
-footer span {
+#panel7 footer span {
     float: right;
 }
